# pretty-print-confusion-matrix

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README-DEV.md  README.md  confusion_matrix_pretty_print.py  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: code-quality-test.yml  python-publish.yml
Screenshots/: conf_matrix_example.eps
examples/: arrays_example.py  df_example.py  docs.py
pretty_cm/: .gitignore  __init__.py
pretty_confusion_matrix/: __init__.py  pretty_confusion_matrix.py
tests/: docs.py  test_ppcm.py
