[project]
name = "pretty-confusion-matrix"
version = "0.8.1"
description = "plot a pretty confusion matrix (like Matlab) in python using seaborn and matplotlib"
repository = "https://github.com/wcipriano/pretty-print-confusion-matrix"
authors = [
    { name = "Wagner Cipriano", email = "wagnao@gmail.com" },
    { name = "Khuyen Tran", email = "khuyentran1476@gmail.com" }
]
keywords = ["confusion matrix"]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
homepage = "https://pypi.org/project/pretty-confusion-matrix"
source = "https://github.com/wcipriano/pretty-print-confusion-matrix"
download = "https://pypi.org/project/pretty-confusion-matrix/#files"
tracker = "https://github.com/wcipriano/pretty-print-confusion-matrix/issues"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = [
    {version = "^2.3.0", python = ">=3.11"},
    {version = "^2.2.0", python = "<3.11"},
]
matplotlib = "^3.10.9"
seaborn = "^0.13.2"
pandas = [
    {version = "^3.0.2", python = ">=3.11"},
    {version = "^2.3.3", python = "<3.11"},
]
scikit-learn = [
    {version = "^1.8.0", python = ">=3.11"},
    {version = "^1.7.2", python = "<3.11"},
]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pre-commit = "^4.6.0"
black = "^26.3.1"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''